WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203437
REGRESSION(
r251599
): Crash in MobileSafari tests (ASSERTION FAILED: m_pendingRequestToSuspendID)
https://bugs.webkit.org/show_bug.cgi?id=203437
Summary
REGRESSION(r251599): Crash in MobileSafari tests (ASSERTION FAILED: m_pending...
Chris Dumez
Reported
2019-10-25 16:00:57 PDT
Crash in MobileSafari tests (ASSERTION FAILED: m_pendingRequestToSuspendID): ASSERTION FAILED: m_pendingRequestToSuspendID Source/WebKit/UIProcess/ProcessThrottler.cpp(122) : void WebKit::ProcessThrottler::prepareToSuspendTimeoutTimerFired() 1 0x105b623a9 WTFCrash 2 0x11052b20b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x110db63bd WebKit::ProcessThrottler::prepareToSuspendTimeoutTimerFired() 4 0x110dc304b WTF::RunLoop::Timer<WebKit::ProcessThrottler>::fired() 5 0x105bf6a5e WTF::RunLoop::TimerBase::timerFired(__CFRunLoopTimer*, void*) 6 0x7fff23dc4a04
Attachments
Patch
(1.90 KB, patch)
2019-10-25 16:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-10-25 16:01:11 PDT
<
rdar://problem/56633399
>
Chris Dumez
Comment 2
2019-10-25 16:03:37 PDT
Created
attachment 381975
[details]
Patch
Geoffrey Garen
Comment 3
2019-10-25 20:58:25 PDT
Comment on
attachment 381975
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-10-25 21:53:41 PDT
Comment on
attachment 381975
[details]
Patch Clearing flags on attachment: 381975 Committed
r251627
: <
https://trac.webkit.org/changeset/251627
>
WebKit Commit Bot
Comment 5
2019-10-25 21:53:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug